# bitcoin-loan-dapp-v2

./: .env  .gitignore  Cargo.toml  README.md  check_canisters.sh  deploy.sh  deployment-info.txt  dfx.json  dfx.json.backup  package-lock.json  package.json  test_canister_connection.sh  verify_deployment.sh
.dfx/local/: canister_ids.json  wallets.json
.dfx/local/canisters/bitcoin_escrow_canister/: index.js  service.did.d.ts  service.did.js
.dfx/local/lsp/: umunu-kh777-77774-qaaca-cai.did  uxrrr-q7777-77774-qaaaq-cai.did  uzt4z-lp777-77774-qaabq-cai.did
.dfx/network/local/: network-id  replica-effective-config.json
cypress/e2e/: smoke.cy.js
src/bitcoin_escrow_canister/: Cargo.toml  bitcoin_escrow_canister.did
src/bitcoin_escrow_canister/src/: lib.rs
src/bitcoin_loan_dapp_backend/: Cargo.toml
src/bitcoin_loan_dapp_backend/src/: lib.rs
src/bitcoin_loan_dapp_frontend/: index.html  package.json  postcss.config.js  tailwind.config.js  vite.config.js
src/bitcoin_loan_dapp_frontend/src/: App.jsx  AuthContext.jsx  CreateEscrowModal.jsx  CreateLoanModal.css  CreateLoanModal.jsx  Dashboard.css  Dashboard.jsx  EscrowDashboard.css  EscrowDashboard.jsx  HowItWorks.css  LandingPage.css  LandingPage.jsx  ProtectedRoute.jsx  actor.js  agent.js  config.js  debug-actor.js  escrow-agent.js  index.css  main.jsx  plugOverride.js  wallet.jsx
src/declarations/bitcoin_loan_dapp_backend/: bitcoin_loan_dapp_backend.did.d.ts  bitcoin_loan_dapp_backend.did.js  index.d.ts  index.js
src/declarations/bitcoin_loan_dapp_frontend/: index.d.ts  index.js
(+297 files in other folders)
