[package]
name = "bitcoin_loan_dapp_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
ic-stable-structures = "0.6"
serde = { version = "1.0", features = ["derive"] }
